<resources>
    <string name="app_name">CinemaWorld</string>
    <string name="title">WorldCinema</string>
    <string name="password">Пароль</string>
    <string name="email">E-mail</string>
    <string name="enter">Войти</string>
    <string name="registration">Регистрация</string>
    <string name="name">Имя</string>
    <string name="surname">Фамилия</string>
    <string name="repeatPassword">Повторите пароль</string>
    <string name="signUp">Зарегистрироваться</string>
    <string name="haveAccount">У меня уже есть аккаунт</string>
    <string name="home_page">Главное</string>
    <string name="recommendations">Подборка</string>
    <string name="collections">Коллекции</string>
    <string name="profile">Профиль</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="brand">Наименование</string>
    <string name="naming">Название</string>
</resources>