<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/OrangeButton"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/dark"
    android:orientation="vertical"
    tools:context=".Authorization">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="100dp"
        android:layout_marginBottom="104dp"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/splashScreen"
            android:layout_width="200dp"
            android:layout_height="100dp"
            android:src="@drawable/icon" />

        <TextView
            android:id="@+id/txtSplash"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_bold"
            android:gravity="center"
            android:text="@string/title"
            android:textColor="@color/orange"
            android:textSize="50sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/editEmail"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="15dp"
            android:height="44dp"
            android:background="@drawable/shape_edit_text"
            android:hint="@string/email"
            android:paddingStart="17dp"
            android:textColor="@color/gray"
            android:textColorHint="@color/gray"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/editPassword"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:height="44dp"
            android:background="@drawable/shape_edit_text"
            android:hint="@string/password"
            android:paddingStart="17dp"
            android:textColor="@color/gray"
            android:textColorHint="@color/gray"
            android:textSize="14sp"
            android:password="true"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="bottom"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="78dp"
        android:gravity="bottom"
        android:orientation="vertical">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            app:strokeColor="@color/gray"
            android:textColor="@color/white"
            android:height="50dp"
            android:text="@string/enter"
            android:backgroundTint="@color/orange"
            android:textAllCaps="false"
            />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/signUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            app:strokeColor="@color/gray"
            android:textColor="@color/orange"
            android:height="50dp"
            android:text="@string/registration"
            android:textAllCaps="false"
            android:onClick="SignUp"
            />

    </LinearLayout>
</LinearLayout>